--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "tuupola/slim-jwt-auth": "^2.0",
         "tuupola/slim-basic-auth": "^2.0",
         "ramsey/uuid": "^3.1",
-        "league/fractal": "^0.13.0"
+        "league/fractal": "^0.13.0",
+        "micheh/psr7-cache": "^0.3.0"
     },
     "autoload": {
         "psr-4": {
