Use nine base62 encoded random bytes instead of uuid
https://paragonie.com/blog/2015/09/comprehensive-guide-url-parameter-encryption-in-php

--- a/composer.json
+++ b/composer.json
@@ -24,13 +24,14 @@
         "vlucas/spot2": "^2.1",
         "tuupola/slim-jwt-auth": "^2.0",
         "tuupola/slim-basic-auth": "^2.0",
-        "ramsey/uuid": "^3.1",
         "league/fractal": "^0.13.0",
-        "micheh/psr7-cache": "^0.3.0"
+        "micheh/psr7-cache": "^0.3.0",
+        "paragonie/random_compat": "^1.2"
     },
     "autoload": {
         "psr-4": {
             "App\\": "lib/App/",
+            "Utils\\": "lib/Utils/",
             "Doctrine\\DBAL\\Logging\\": "lib/Doctrine/DBAL/Logging/",
             "Exception\\": "lib/Exception/",
             "Slim\\Handlers\\": "lib/Slim/Handlers/"
