Log from API error

--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
             "Utils\\": "lib/Utils/",
             "Doctrine\\DBAL\\Logging\\": "lib/Doctrine/DBAL/Logging/",
             "Exception\\": "lib/Exception/",
-            "Slim\\Handlers\\": "lib/Slim/Handlers/"
+            "Slim\\Handlers\\": "lib/Slim/Handlers/",
+            "Slim\\Middleware\\": "lib/Slim/Middleware/"
         }
     },
     "require-dev": {
