--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,9 @@
         "tuupola/slim-jwt-auth": "^2.0",
         "tuupola/slim-basic-auth": "^2.0",
         "league/fractal": "^0.13.0",
-        "micheh/psr7-cache": "^0.3.0",
         "paragonie/random_compat": "^1.2",
-        "tuupola/cors-middleware": "dev-master"
+        "tuupola/cors-middleware": "dev-master",
+        "micheh/psr7-cache": "^0.5.0"
     },
     "autoload": {
         "psr-4": {
