--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "tuupola/slim-basic-auth": "^2.0",
         "league/fractal": "^0.13.0",
         "paragonie/random_compat": "^1.2",
-        "tuupola/cors-middleware": "dev-master",
+        "tuupola/cors-middleware": "^0.5.0",
         "micheh/psr7-cache": "^0.5.0",
         "gofabian/negotiation-middleware": "^0.1.1"
     },
