--- a/composer.json
+++ b/composer.json
@@ -41,12 +41,13 @@
         }
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "^2.5"
+        "squizlabs/php_codesniffer": "^2.5",
+        "overtrue/phplint": "^0.2.0"
     },
     "scripts": {
         "test": "composer phplint && composer phpcs",
         "phpcs": "vendor/bin/phpcs --standard=PSR2 --extensions=php --ignore=*/vendor/* . -p",
-        "phplint": "env phplint  '**/*.php' '!vendor/**'",
+        "phplint": "vendor/bin/phplint . --exclude=vendor/",
         "watch": "find . -name \"*.php\" -not -path \"./vendor/*\" -o -name \"*.json\" -not -path \"./vendor/*\"| entr -c composer test"
     }
 }
