--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "micheh/psr7-cache": "^0.5.0",
         "gofabian/negotiation-middleware": "^0.1.2",
         "tuupola/base62": "^0.8.0",
-        "tuupola/dbal-psr3-logger": "^0.1.0"
+        "tuupola/dbal-psr3-logger": "^0.1.0",
+        "crell/api-problem": "^2.0"
     },
     "autoload": {
         "psr-4": {
