--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
             "App\\": "src/App/",
             "Utils\\": "src/Utils/",
             "Exception\\": "src/Exception/",
+            "Response\\": "src/Response/",
             "Slim\\Handlers\\": "src/Slim/Handlers/"
         }
     },
