--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,13 @@ php:
     - 5.6
     - 7.0
     - 7.1
+    - nightly
 
 matrix:
     fast_finish: true
     allow_failures:
         - php: hhvm
+        - php: nightly
     include:
         - php: hhvm
           dist: trusty
