--- a/composer.json
+++ b/composer.json
@@ -47,12 +47,14 @@
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^2.5",
-        "overtrue/phplint": "^0.2.0"
+        "overtrue/phplint": "^0.2.0",
+        "phpunit/phpunit": "^5.7"
     },
     "scripts": {
-        "test": "composer phplint && composer phpcs",
+        "test": "composer phplint && composer phpcs && composer phpunit",
         "phpcs": "vendor/bin/phpcs --standard=PSR2 --extensions=php --ignore=*/vendor/* . -p",
         "phplint": "vendor/bin/phplint . --exclude=vendor/",
+        "phpunit": "vendor/bin/phpunit --coverage-text --coverage-clover=coverage.xml --coverage-html=./report/",
         "watch": "find . -name \"*.php\" -not -path \"./vendor/*\" -o -name \"*.json\" -not -path \"./vendor/*\"| entr -c composer test"
     }
 }
