Composer is not a task runner

--- a/composer.json
+++ b/composer.json
@@ -43,16 +43,14 @@
             "Skeleton\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Skeleton\\": "src/"
+        }
+    },
     "require-dev": {
         "squizlabs/php_codesniffer": "^2.5",
         "phpunit/phpunit": "^5.7",
         "overtrue/phplint": "^1.0"
-    },
-    "scripts": {
-        "test": "composer phplint && composer phpcs && composer phpunit",
-        "phpcs": "vendor/bin/phpcs --standard=PSR2 --extensions=php --ignore=*/vendor/*,*/db/* . -p",
-        "phplint": "vendor/bin/phplint . --exclude=vendor/",
-        "phpunit": "vendor/bin/phpunit --coverage-text --coverage-clover=coverage.xml --coverage-html=./report/",
-        "watch": "find . -name \"*.php\" -not -path \"./vendor/*\" -o -name \"*.json\" -not -path \"./vendor/*\"| entr -c composer test"
     }
 }
