--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
         "zendframework/zend-inputfilter": "^2.8",
         "zendframework/zend-hydrator": "^2.3",
         "lstrojny/functional-php": "^1.6",
-        "robmorgan/phinx": "^0.9.2"
+        "robmorgan/phinx": "^0.9.2",
+        "league/tactician": "^1.0"
     },
     "autoload": {
         "psr-4": {
