--- a/composer.json
+++ b/composer.json
@@ -18,26 +18,27 @@
             "role": "Developer"
         }
     ],
+    "config": {
+        "sort-packages": true
+    },
     "require": {
-        "slim/slim": "^3.0",
-        "monolog/monolog": "^1.17",
-        "vlucas/phpdotenv": "^2.0",
-        "tuupola/slim-jwt-auth": "3.x-dev",
-        "tuupola/slim-basic-auth": "3.0.0-rc.3",
-        "league/fractal": "^0.13.0",
-        "paragonie/random_compat": "^1.2",
-        "tuupola/cors-middleware": "^0.6.0",
-        "micheh/psr7-cache": "^0.5.0",
-        "gofabian/negotiation-middleware": "^0.1.2",
-        "tuupola/base62": "^0.8.0",
         "crell/api-problem": "^2.0",
-        "firebase/php-jwt": "^4.0",
-        "zendframework/zend-db": "^2.9",
-        "zendframework/zend-inputfilter": "^2.8",
-        "zendframework/zend-hydrator": "^2.3",
+        "gofabian/negotiation-middleware": "^0.1.2",
+        "league/fractal": "^0.13.0",
+        "league/tactician": "^1.0",
         "lstrojny/functional-php": "^1.6",
+        "micheh/psr7-cache": "^0.5.0",
+        "monolog/monolog": "^1.17",
         "robmorgan/phinx": "^0.9.2",
-        "league/tactician": "^1.0"
+        "slim/slim": "^3.9",
+        "tuupola/base62": "^0.9.0",
+        "tuupola/cors-middleware": "^0.7.0",
+        "tuupola/slim-basic-auth": "3.0.0-rc.4",
+        "tuupola/slim-jwt-auth": "3.0.0-rc.4",
+        "vlucas/phpdotenv": "^2.0",
+        "zendframework/zend-db": "^2.9",
+        "zendframework/zend-hydrator": "^2.3",
+        "zendframework/zend-inputfilter": "^2.8"
     },
     "autoload": {
         "psr-4": {
