--- a/composer.json
+++ b/composer.json
@@ -33,8 +33,8 @@
         "slim/slim": "^3.9",
         "tuupola/base62": "^0.9.0",
         "tuupola/cors-middleware": "^0.7.0",
-        "tuupola/slim-basic-auth": "3.0.0-rc.5",
-        "tuupola/slim-jwt-auth": "3.0.0-rc.5",
+        "tuupola/slim-basic-auth": "^3.0",
+        "tuupola/slim-jwt-auth": "^3.0",
         "vlucas/phpdotenv": "^2.0",
         "zendframework/zend-db": "^2.9",
         "zendframework/zend-hydrator": "^2.3",
