--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "slim/slim": "^3.9",
         "tuupola/base62": "^0.10.0",
         "tuupola/cors-middleware": "^0.7.0",
+        "tuupola/server-timing-middleware": "^0.7.0",
         "tuupola/slim-basic-auth": "^3.0",
         "tuupola/slim-jwt-auth": "^3.0",
         "vlucas/phpdotenv": "^2.0",
