--- a/composer.json
+++ b/composer.json
@@ -32,10 +32,10 @@
         "robmorgan/phinx": "^0.9.2",
         "slim/slim": "^3.9",
         "tuupola/base62": "^0.10.0",
+        "tuupola/branca-middleware": "^0.4.1",
         "tuupola/cors-middleware": "^0.7.0",
         "tuupola/server-timing-middleware": "^0.7.0",
         "tuupola/slim-basic-auth": "^3.0",
-        "tuupola/slim-jwt-auth": "^3.0",
         "vlucas/phpdotenv": "^2.0",
         "zendframework/zend-db": "^2.9",
         "zendframework/zend-hydrator": "^2.3",
