--- a/composer.json
+++ b/composer.json
@@ -51,8 +51,8 @@
         }
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "^3.2",
-        "phpunit/phpunit": "^5.7",
-        "overtrue/phplint": "^1.0"
+        "overtrue/phplint": "^1.0",
+        "phpunit/phpunit": "^7.3",
+        "squizlabs/php_codesniffer": "^3.2"
     }
 }
