--- a/composer.json
+++ b/composer.json
@@ -31,10 +31,11 @@
         "monolog/monolog": "^1.17",
         "robmorgan/phinx": "^0.9.2",
         "slim/slim": "^3.9",
-        "tuupola/branca-middleware": "^0.4.1",
-        "tuupola/server-timing-middleware": "^0.7.0",
         "tuupola/base62": "^1.0",
+        "tuupola/branca-middleware": "^0.5.1",
         "tuupola/cors-middleware": "^0.8.0",
+        "tuupola/ksuid": "^0.3.0",
+        "tuupola/server-timing-middleware": "^0.7.0",
         "tuupola/slim-basic-auth": "^3.2",
         "vlucas/phpdotenv": "^2.0",
         "zendframework/zend-db": "^2.9",
