Upload coverage info to codecov

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,9 @@ before_script:
 script:
     - make travis
 
+after_success:
+    - bash <(curl -s https://codecov.io/bash)
+
 cache:
     directories:
         - $HOME/.composer/cache
