--- a/composer.json
+++ b/composer.json
@@ -53,6 +53,7 @@
     "require-dev": {
         "overtrue/phplint": "^1.0",
         "phpunit/phpunit": "^7.3",
-        "squizlabs/php_codesniffer": "^3.2"
+        "squizlabs/php_codesniffer": "^3.2",
+        "tuupola/http-factory": "^1.0"
     }
 }
