--- a/phinx.yml
+++ b/phinx.yml
@@ -24,12 +24,7 @@ environments:
         charset: utf8
 
     testing:
-        adapter: mysql
-        host: localhost
-        name: testing_db
-        user: root
-        pass: ''
-        port: 3306
-        charset: utf8
+        adapter: sqlite
+        name: /tmp/skeleton.sqlite3
 
 version_order: creation
