--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ matrix:
         - php: nightly
 
 before_script:
+    - phpenv config-rm xdebug.ini
     - travis_retry composer self-update
     - travis_retry composer install --no-interaction
 
