--- a/composer.json
+++ b/composer.json
@@ -29,8 +29,11 @@
         "lstrojny/functional-php": "^1.6",
         "micheh/psr7-cache": "^0.5.0",
         "monolog/monolog": "^1.17",
+        "nyholm/psr7": "^1.1",
+        "nyholm/psr7-server": "^0.3.0",
+        "php-di/php-di": "^6.0",
         "robmorgan/phinx": "^0.9.2",
-        "slim/slim": "^3.9",
+        "slim/slim": "^4.0",
         "tuupola/base62": "^2.0",
         "tuupola/cors-middleware": "^1.0",
         "tuupola/slim-basic-auth": "^3.2",
