--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,15 @@ matrix:
     allow_failures:
         - php: nightly
 
+env:
+  matrix:
+    - COMPOSER_FLAGS="--prefer-lowest"
+    - COMPOSER_FLAGS=""
+
 before_script:
     - phpenv config-rm xdebug.ini
     - travis_retry composer self-update
-    - travis_retry composer install --no-interaction
+    - travis_retry composer update $COMPOSER_FLAGS --no-interaction --prefer-source
 
 script:
     - make travis
