--- a/composer.json
+++ b/composer.json
@@ -25,13 +25,16 @@
         "php": "^7.3|^8.0",
         "crell/api-problem": "^3.3",
         "gofabian/negotiation-middleware": "^0.1.2",
+        "laminas/laminas-db": "^2.12",
+        "laminas/laminas-hydrator": "^3.2",
+        "laminas/laminas-inputfilter": "^2.11",
         "league/fractal": "^0.13.0",
         "league/tactician": "^1.0",
         "lstrojny/functional-php": "^1.6",
         "micheh/psr7-cache": "^0.5.0",
         "monolog/monolog": "^1.17",
         "nyholm/psr7": "^1.1",
-        "nyholm/psr7-server": "^0.3.0",
+        "nyholm/psr7-server": "^1.0",
         "php-di/php-di": "^6.0",
         "robmorgan/phinx": "^0.9.2",
         "slim/slim": "^4.0",
@@ -39,10 +42,7 @@
         "tuupola/cors-middleware": "^1.0",
         "tuupola/slim-basic-auth": "^3.2",
         "tuupola/slim-jwt-auth": "^3.1",
-        "vlucas/phpdotenv": "^2.0",
-        "laminas/laminas-db": "^2.12",
-        "laminas/laminas-hydrator": "^3.2",
-        "laminas/laminas-inputfilter": "^2.11"
+        "vlucas/phpdotenv": "^2.0"
     },
     "autoload": {
         "psr-4": {
